# LJG_Testing

./: .gitignore  README.md
2_applications/ai-infra-model-main-2/: .gitignore  AGENTS.md  CUSTOMER_SUPPORT_SUMMARY.md  README.md  launcher.py  pyproject.toml  test_market_cap_analysis.py
2_applications/ai-infra-model-main-2/data/: hyperscaler_fcf.csv
2_applications/ai-infra-model-main-2/data/cloud_contracts/: openai_announcements.csv
2_applications/ai-infra-model-main-2/data/nvda_shipment_data/: nvda_gir.xlsx
2_applications/ai-infra-model-main-2/data/users_and_revenue/: Facebook_MAUs_by_Region_Q4_2023_millions.csv  Meta_Facebook_ARPU_by_Region_Q4_2023_USD_per_quarter.csv  Netflix_ARPU_by_region_2025_Q2.csv
2_applications/ai-infra-model-main-2/docs/: customer_support_segment_analysis.md
2_applications/ai-infra-model-main-2/implementation_plans/: basic_gpu_model_enhancements.md  customer_support_integration_plan.md  datacenter_retrofit_cash_flow_enhancement.md
2_applications/ai-infra-model-main-2/src/: __init__.py
2_applications/ai-infra-model-main-2/src/constants/: __init__.py  ai_company_stock_tickers.py  ai_lab_profiles.py  cloud_contracts.py  common.py  company_financing_profiles.py  datacenter_retrofit_scenarios_dataclass.py  gpu_cloud_scenarios_dataclass.py  gpu_dataclass.py  inference_demand_scenario_dataclass.py  value_chain_markups.py  (+5 more)
2_applications/ai-infra-model-main-2/tests/: test_GPUCloudModel.py  test_InferenceDemandModel.py  test_ValueChainModel.py  test_cloud_contract_loader.py  test_generate_capex_schedule.py  test_gpu_cloud_helpers.py
(+137 files in other folders)
