[project]
name = "ai-infra-model"
version = "0.1.0"
description = "AI Infrastructure Model with Streamlit applications for GPU datacenter buildout calculations"
authors = [{name = "Frank Long"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "openpyxl>=3.1.2",
    "matplotlib>=3.5.0",
    "requests>=2.31.0",
    "kaleido>=1.1.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W291", "W293"]  # Line too long handled by formatter; ignore whitespace-in-blank-lines

[tool.black]
line-length = 100
target-version = ['py310']
